Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8868

HTTP 401 response is wrong when both kerberos and ldap are enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 3.3.0
    • Impala 3.3.0
    • None
    • None
    • ghx-label-3

    Description

      When both kerberos and ldap auth are enabled and an http request is not successfully authenticated, the THttpServer only sends the 'WWW-Authenticate: Basic' challenge and doesn't send the 'WWW-Authenticate: Negotiate' challenge, which can cause clients that want to connect with kerberos to fail to authenticate.

      Attachments

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            twmarshall Thomas Tauber-Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: